# easyp

./: .gitignore  .lto_size  .remote  CERTIFICATE_STORAGE_ANALYSIS.md  Cargo.toml  Cross.toml  PUBLISH_VERSION.bat  README.md  build_for_redox.bat  clonea  commita  deploy.sh  epictracker.py  remote_test  remote_test.sh  simple_test.bat  simple_test.rs  test-lto.sh  test.bat  test_cert_conversion.rs  test_cert_storage_persistence.rs  test_cert_storage_simple.rs  test_client.rs  test_local.rs  untracked.sh  ziplto.ps1
.cargo/: config.toml
.github/workflows/: build.yml  cifuzz.yml  daily-tests.yml  docs.yml
acme-lib/: Cargo.toml  README.md
acme-lib/examples/: test_key_format.rs
acme-lib/src/: api.rs  cert.rs  dir.rs  jwt.rs  lib.rs  persist.rs  req.rs  req_lsb.rs  trans.rs  util.rs
acme-lib/src/acc/: akey.rs
acme-lib/src/order/: auth.rs  mod.rs
bogo/: Cargo.toml
cgi-bin/: epictracker.cgi
crates/lsb-loader/src/: lib.rs
crates/lsb-nix-test/tests/: libressl.rs  nix.rs  openssl_30.rs
crates/lsb-nix-test/tests/common/: mod.rs
crates/lsb-openssl/: Cargo.toml
crates/lsb-openssl/examples/: tls_pair.rs
crates/lsb-openssl/src/: lib.rs
crates/lsb-openssl/tests/: handshake.rs
crates/lsb-squeeze-test/: Cargo.toml
crates/lsb-zlib/examples/: zlib_compress.rs
data/: epic_arcs.txt
data/players/sample_player/: SampleChar.txt
easyp-crate/: Cargo.toml  Proposal_SSE_Sheet.md  build.rs
easyp-crate/extensions/: about.admin.rs  all.admin.rs  comment.admin.rs  comment.bin.rs  logs.admin.rs  logs.stream.rs  stats.admin.rs  upload.admin.rs
easyp-crate/src/: cgi_env.rs  h3_gnutls.c
easyp-crate/src/modules/: acme_lsb.rs  cgi_handler.rs  connection_policy.rs  enhanced_error.rs  file_logger.rs  hourly_stats.rs  http2_handler.rs  http3_handler.rs  http3_handler_windows.rs  http3_monitor.rs  http_response.rs  http_sys_handler.rs  http_version.rs  mod.rs  openssl_stream.rs  secure_file_server_module.rs
evearcs/: .gitignore  epictracker.py
evearcs/data/accounts/: alpha_main.txt
evearcs/web/static/: index.html
examples/: test_acme_pem_format.rs  test_key_compatibility.rs
lsb_dynamic_loader/: .gitignore  Cargo.toml  OPENSSL_COMPATIBILITY.md  README.md
lsb_dynamic_loader/ci/: run_tests.sh
lsb_dynamic_loader/compat/lsb-httpapi/: Cargo.toml
lsb_dynamic_loader/compat/lsb-httpapi/src/: lib.rs
lsb_dynamic_loader/compat/lsb-httpapi/tests/: port_test.rs  print_sizes.rs  url_add_test.rs
lsb_dynamic_loader/compat/lsb-msquic/: Cargo.toml
lsb_dynamic_loader/compat/lsb-msquic/src/: lib.rs
lsb_dynamic_loader/compat/lsb-schannel/: Cargo.toml
lsb_dynamic_loader/compat/lsb-schannel/src/: lib.rs  platform.rs
lsb_dynamic_loader/compat/lsb-winhttp/: Cargo.toml
lsb_dynamic_loader/compat/lsb-winhttp/src/: lib.rs  platform.rs
lsb_dynamic_loader/crates/lsb-loader/: Cargo.toml
lsb_dynamic_loader/crates/lsb-loader/src/: lib.rs
lsb_dynamic_loader/crates/lsb-nix-test/: Cargo.toml
lsb_dynamic_loader/crates/lsb-nix-test/tests/: openssl_11.rs  openssl_35.rs
lsb_dynamic_loader/crates/lsb-openssl/: Cargo.toml
lsb_dynamic_loader/crates/lsb-openssl/src/: certs.rs  lib.rs  tls.rs
lsb_dynamic_loader/crates/lsb-squeeze-test/: build.rs
lsb_dynamic_loader/crates/lsb-squeeze-test/tests/: squeeze.rs
lsb_dynamic_loader/crates/lsb-zlib/: Cargo.toml
lsb_dynamic_loader/crates/lsb-zlib/src/: lib.rs
lsb_dynamic_loader/http_dynamic_loader/: Cargo.toml  build.rs
lsb_dynamic_loader/http_dynamic_loader/src/: h2.rs  lib.rs  ngtcp2_ffi.rs
lsb_dynamic_loader/http_dynamic_loader/src/h3/: callbacks.rs  crypto.rs  http3.rs  mod.rs  quic.rs
lsb_dynamic_loader/tests/resources/: cert.pem  key.pem
minreq/: Cargo.toml
minreq/src/connection/: rustls_stream.rs
r/: local_test.sh  redoxer.bat  run.sh
rcgen/rcgen/: Cargo.toml
recipes/: easyp.toml
ring-redox/: Cargo.toml
ring-wrapper/: Cargo.toml
ring-wrapper/src/: lib.rs
ring-wrapper/tests/: integration_test.rs
rustls/: Cargo.toml
rustls-acme/: Cargo.toml
rustls-acme/src/: client.rs  mod.rs  resolver.rs  validation.rs
rustls-test/: Cargo.toml
rustls/src/: compress.rs  error.rs
rustls/src/crypto/ring/: mod.rs
rustls/src/server/: mod.rs
rustls/src/webpki/: client_verifier.rs  mod.rs  verify.rs
src/: cert.rs  client.rs  jwt.rs  lib.rs  resolver.rs  trans.rs  types.rs  util.rs  validation.rs
src/acc/: akey.rs  mod.rs
src/order/: mod.rs
src/test/: mod.rs
tests/: test_epictracker_basic.py
tokio-rustls/: Cargo.toml
web/: app.py
web/static/: index.html
webpki/: Cargo.toml
website/: README.md  config.toml  upload.sh
website/content/: configuration.md  development.md  downloads.md  extensions.md  features.md  installation.md  troubleshooting.md
website/content/release/: 2025-10-12-easyp-0.1.2.md  2025-10-12-easyp-0.1.3-alpha1.md
website/layouts/: index.html
website/layouts/_default/: baseof.html  feed.html  list.html  single.html
website/public/: spreadsheet.html
website/static/: spreadsheet.html  style.css
website/templates/: base.html  index.html
