[package]
name = "rustls-acme"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
license = "Apache-2.0 OR ISC OR MIT"
description = "ACME certificate management for rustls"
homepage = "https://github.com/rustls/rustls"
repository = "https://github.com/rustls/rustls"
categories = ["network-programming", "cryptography"]
autobenches = false
autotests = false

[dependencies]
# ACME library
acme-lib = { path = "../acme-lib" }

        # rustls for trait implementations
        rustls = { version = "0.24.0-dev.0", features = ["ring"] }

# Async runtime
tokio = { version = "1.34", features = ["io-util", "macros", "net", "rt", "rt-multi-thread"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Crypto and encoding
base64 = "0.22"
sha2 = { version = "0.10", default-features = false }
rand = "0.8"
rcgen = { version = "0.14.4", features = ["pem", "ring"], default-features = false }

# Time handling
time = { version = "0.3.6", default-features = false }

# DNS resolution
hickory-resolver = { version = "0.25", features = ["https-aws-lc-rs", "webpki-roots"] }

# Logging
log = "0.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Network
get_if_addrs = "0.5"

        # PKI types (needed for certificate handling)
        pki-types = { package = "rustls-pki-types", version = "1.12", features = ["alloc"] }

        # PEM file parsing
        rustls-pemfile = "2.0"

        # AWS-LC crypto provider
        aws-lc-rs = { version = "1.14", default-features = false }

[dev-dependencies]
# For testing
anyhow = "1.0"
