[workspace]
members = [
  # Bogo test shim
  "bogo",
  # the main library and tests
  "rustls",
  # common code for testing the core crate
  "rustls-test",
  # ACME certificate management
  "rustls-acme",
  # easyp HTTPS server
  "easyp-crate",
  # HTTP client
  "minreq",
  # Web PKI certificate verification
  "webpki",
  # tokio-rustls with local rustls
  "tokio-rustls",
  # Ring wrapper for redox compatibility
  "ring-wrapper",
]

## Deliberately not included in `members`:
exclude = [
  # `cargo fuzz` integration (requires nightly)
  "fuzz",
  # acme-lib is a separate project
  "acme-lib",
]

default-members = [
  # ---
  "easyp-crate",
  "rustls",
  "rustls-acme",
]
resolver = "2"

[workspace.dependencies]
acme-lib = "0.9.1"
anyhow = "1.0.73"
asn1 = "0.22"
async-trait = "0.1.74"
aws-lc-rs = { version = "1.14", default-features = false }
base64 = "0.22"
bencher = "0.1.5"
brotli = { version = "8", default-features = false, features = ["std"] }
brotli-decompressor = "5.0.0"
byteorder = "1.4.3"
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
clap = { version = "4.3.21", features = ["derive", "env"] }
crabgrind = "=0.1.9" # compatible with valgrind package on GHA ubuntu-latest
criterion = "0.7"
der = "0.7"
ecdsa = { version = "0.16.8", features = ["pem"] }
env_logger = "0.11"
hashbrown = { version = "0.15", default-features = false, features = ["default-hasher", "inline-more"] }
hex = "0.4"
hickory-resolver = { version = "0.25", features = ["https-aws-lc-rs", "webpki-roots"] }
get_if_addrs = "0.5"
# regex removed - using simple string operations instead
minreq = { version = "2.14", features = ["https-rustls"] }
hmac = "0.12"
thiserror = "1.0"
hpke-rs = "0.3"
hpke-rs-crypto = "0.3"
hpke-rs-rust-crypto = "0.3"
itertools = "0.14"
lexopt = "0.3"
log = { version = "0.4.8" }
macro_rules_attribute = "0.2"
mio = { version = "1", features = ["net", "os-poll"] }
num-bigint = "0.4.4"
once_cell = { version = "1.16", default-features = false, features = ["alloc", "race"] }
openssl = "0.10"
p256 = { version = "0.13.2", default-features = false, features = ["alloc", "ecdsa", "pkcs8"] }
pkcs8 = "0.10.2"
pki-types = { package = "rustls-pki-types", version = "1.12", features = ["alloc"] }
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }
rayon = "1.7"
rcgen = { path = "rcgen/rcgen", features = ["pem", "ring"], default-features = false }
ring-wrapper = { path = "ring-wrapper", package = "ring" }
rsa = { version = "0.9", features = ["sha2"], default-features = false }
rustc-hash = "2"
rustls = { path = "rustls" }
rustls-graviola = { version = "0.2" }
rustls-test = { path = "rustls-test/" }
rustls-fuzzing-provider = { path = "rustls-fuzzing-provider/" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = { version = "0.10", default-features = false }
signature = "2"
subtle = { version = "2.5.0", default-features = false }
time = { version = "0.3.6", default-features = false }
tikv-jemallocator = "0.6"
tempfile = "3.0"
tokio = { version = "1.34", features = ["io-util", "macros", "net", "rt"] }
webpki = { package = "rustls-webpki", path = "webpki", features = ["alloc"], default-features = false }
rustls-webpki = { package = "rustls-webpki", path = "webpki", features = ["alloc"], default-features = false }
webpki-roots = "1"
x25519-dalek = "2"
x509-parser = "0.18"
zeroize = "1.8"
zlib-rs = "0.5"


[profile.bench]
codegen-units = 1
lto = true



# ensure all our tests are against the local copy, never
# against the latest _published_ copy.
[patch.crates-io]
rustls = { path = "rustls" }
rcgen = { path = "rcgen/rcgen", version = "0.14.5" }
minreq = { path = "minreq" }

[profile.lto]
opt-level = "z"
strip = true
lto = "fat"
incremental = false
overflow-checks = true
debug = false
codegen-units = 1
inherits = "release"

