[package]
name = "acme-lib"
description = "Library for requesting certificates from an ACME provider."
license = "MIT"
repository = "https://github.com/algesten/acme-lib"
readme = "README.md"
version = "0.9.1"
authors = ["Martin Algesten <martin@algesten.se>"]
keywords = ["letsencrypt", "acme"]
categories = ["web-programming", "api-bindings"]
edition = "2018"

[features]
default = ["crypto-rustls"]
crypto-rustls = ["minreq"]
crypto-lsb = []

[dependencies]
base64 = "0.22"
jiff = "0.2"
lazy_static = "1"
log = "0.4"
rustls-pemfile = "2.0"
rustls-pki-types = "1.12"
x509-parser = "0.18"
pem = "3.0"
rand = "0.8"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
minreq = { path = "../minreq", features = ["https-rustls"], default-features = false, optional = true }
lsb-openssl = { path = "../lsb_dynamic_loader/crates/lsb-openssl" }

[target.'cfg(target_os = "redox")'.dependencies]
minreq = { path = "../minreq", default-features = false, optional = true }

[dev-dependencies]
env_logger = { version = "0.11", default-features = false }
futures = "0.3"
hex = "0.4"
rsa = { version = "0.9", features = ["sha2"], default-features = false }
