[package]
name = "tokio-rustls"
version = "0.26.4"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rustls/tokio-rustls"
homepage = "https://github.com/rustls/tokio-rustls"
documentation = "https://docs.rs/tokio-rustls"
readme = "README.md"
description = "Asynchronous TLS/SSL streams for Tokio using Rustls."
categories = ["asynchronous", "cryptography", "network-programming"]
edition = "2021"
rust-version = "1.71"
exclude = ["/.github", "/examples", "/scripts"]

[dependencies]
rustls = { path = "../rustls", default-features = false, features = ["std"] }
tokio = "1.0"

[features]
default = []
aws_lc_rs = ["rustls/aws-lc-rs"]
aws-lc-rs = ["aws_lc_rs"]
brotli = ["rustls/brotli"]
early-data = []
fips = ["rustls/fips"]
ring = ["rustls/ring"]
zlib = ["rustls/zlib"]

[dev-dependencies]
argh = "0.1.1"
futures-util = "0.3.1"
lazy_static = "1.1"
rcgen = { version = "0.14", features = ["pem"] }
tokio = { version = "1.0", features = ["full"] }
webpki-roots = "1"
